--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,31 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  /* color */
+  --primary-color: ##ffffff;
+  --secondary: #171717;
+  --black: #000000;
+  --white: #ffffff;
+
+  /* spacing */
+  --spacing-xxs: 0.125rem; /* 2px */
+  --spacing-xs: 0.25rem; /* 4px */
+  --spacing-s: 0.5rem; /* 8px */
+  --spacing-m: 0.75rem; /* 12px */
+  --spacing-l: 1rem; /* 16px */
+  --spacing-xl: 1.5rem; /* 24px */
+  --spacing-xxl: 2rem; /* 32px */
+  --spacing-xxxl: 3rem; /* 48px */
+  --spacing-xxxxl: 4rem; /* 64px */
+
+  /* font */
+  --font-xxs: 0.75rem; /* 12px */
+  --font-xs: 0.875rem; /* 14px */
+  --font-s: 1rem; /* 16px */
+  --font-m: 1.125rem; /* 18px */
+  --font-l: 1.25rem; /* 20px */
+  --font-xl: 1.5rem; /* 24px */
 }
 
 html,
@@ -22,6 +40,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: var(--font-s);
 }
 
 * {
@@ -33,10 +52,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
