--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,3 +49,22 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+/* animation */
+@keyframes slideDown {
+  from {
+    height: 0;
+  }
+  to {
+    height: var(--radix-accordion-content-height);
+  }
+}
+
+@keyframes slideUp {
+  from {
+    height: var(--radix-accordion-content-height);
+  }
+  to {
+    height: 0;
+  }
+}
