--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,13 +17,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
   color: var(--color-white);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
@@ -52,4 +46,17 @@ div[data-radix-popper-content-wrapper] {
   to {
     height: 0;
   }
+}
+
+@keyframes moveBackground {
+  0% {
+    background-position: 0 0, 0 0, 0 0;
+  }
+  100% {
+    background-position: 0 -100px, 0 -50px, 0 -20px;
+  }
+}
+
+.animate-background {
+  animation: moveBackground 30s linear infinite;
 }
