--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 
 @theme {
+  --font-righteous: var(--font-righteous), sans-serif;
+
   --color-primary: rgba(138, 34, 11);
   --color-primary-light: rgba(138, 34, 11, 0.5);
   --color-secondary: rgba(44, 212, 255);
@@ -10,7 +12,9 @@
   --color-green-light: rgba(133, 224, 163);
   --color-black: rgba(0, 0, 0);
   --color-white: rgba(255, 255, 255);
-  --color-black-30: rgba(30, 30, 30);
+  --color-text-black-30: rgba(30, 30, 30);
+  --color-text-secondary: rgba(255, 255, 255, 0.7);
+  --color-border: rgba(68, 68, 68);
 }
 
 html,
