--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @theme {
   --font-righteous: var(--font-righteous), sans-serif;
 
-  --color-primary: rgba(138, 34, 111);
+  --color-primary: rgba(138, 34, 115);
   --color-secondary: rgba(44, 212, 255);
   --color-pink: rgba(234, 63, 184);
   --color-mint: rgba(78, 250, 213);
@@ -13,8 +13,11 @@
   --color-white: rgba(255, 255, 255);
   --color-text-black-30: rgba(30, 30, 30);
   --color-text-secondary: rgba(255, 255, 255, 0.7);
-  --color-border-primary: rgba(245, 245, 245);
-  --color-border-secondary: rgba(68, 68, 68);
+
+  --color-border-default-primary: rgba(68, 68, 68);
+  --color-border-default-secondary: rgba(117, 117, 117);
+  --color-border-brand-primary: rgba(245, 245, 245);
+
   --color-icon-secondary: rgba(255, 255, 255, 0.4);
 }
 
@@ -32,6 +35,31 @@ a {
 
 div[data-radix-popper-content-wrapper] {
   z-index: 99;
+}
+
+.glass-effect {
+  @apply relative overflow-hidden backdrop-blur-[5px];
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1),
+    inset 0 1px 0 rgba(255, 255, 255, 0.1),
+    inset 0 -1px 0 rgba(255, 255, 255, 0.1),
+    inset 0 0 4px 2px rgba(255, 255, 255, 0.2);
+}
+
+.glass-effect::before {
+  @apply absolute top-0 left-0 right-0 h-px;
+  background: rgba(255, 255, 255, 0.2);
+  content: "";
+}
+
+.glass-effect::after {
+  @apply absolute top-0 left-0 w-px h-full;
+  background: rgba(255, 255, 255, 0.2);
+  content: "";
+}
+
+.outside-shadow {
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.4),
+    0 1px 20px rgba(255, 255, 255, 0.2);
 }
 
 /* animation */
