--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
   --font-righteous: var(--font-righteous), sans-serif;
 
   --color-primary: rgba(138, 34, 115);
-  --color-secondary: rgba(44, 212, 255);
+  --color-blue: rgba(44, 212, 255);
   --color-pink: rgba(234, 63, 184);
   --color-mint: rgba(78, 250, 213);
   --color-green: rgba(0, 128, 67);
@@ -13,10 +13,14 @@
   --color-white: rgba(255, 255, 255);
   --color-text-black-30: rgba(30, 30, 30);
   --color-text-secondary: rgba(255, 255, 255, 0.7);
+  --color-text-neutral: rgba(36, 36, 36);
+  --color-text-brand-secondary: rgba(217, 217, 217);
 
   --color-border-default-primary: rgba(68, 68, 68);
   --color-border-default-secondary: rgba(117, 117, 117);
   --color-border-brand-primary: rgba(245, 245, 245);
+  --color-border-neutral-primary: rgba(243, 243, 243);
+  --color-border-neutral-tertiary: rgba(118, 118, 118);
 
   --color-icon-secondary: rgba(255, 255, 255, 0.4);
 }
