--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,7 @@
   --color-text-secondary: rgba(255, 255, 255, 0.7);
   --color-text-neutral-default: rgba(227, 227, 227);
   --color-text-neutral-tertiary: rgba(178, 178, 178);
+  --color-text-default-tertiary: rgba(179, 179, 179);
   --color-text-brand-primary: rgba(44, 44, 44);
   --color-text-brand-secondary: rgba(217, 217, 217);
 
